calculate viewport using jquery; fixes the pop-up for windows with horizontal scrollbar

--- a/js-library/src/css/basic.less
+++ b/js-library/src/css/basic.less
@@ -121,6 +121,7 @@ div#factlink-indicator {
 
 div#fl-prepare {
   display: none;
+  z-index : 13371337;
   
   margin: 0;
 	padding: 0;
